--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public"
+    "start": "sirv public",
+    "deploy": "gh-pages -d public"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "d3": "^5.15.1",
+    "gh-pages": "^2.2.0",
     "sirv-cli": "^0.4.4"
   }
 }
