--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "d3": "^5.15.1",
     "gh-pages": "^2.2.0",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "topojson": "^3.0.2"
   }
 }
