--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "deploy": "gh-pages -d public"
+    "deploy": "npm run build; gh-pages -d public"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
