--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "gh-pages": "^2.2.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
@@ -18,8 +19,8 @@
   },
   "dependencies": {
     "d3": "^5.15.1",
-    "gh-pages": "^2.2.0",
     "mapbox-gl": "^1.9.1",
+    "moment": "^2.24.0",
     "sirv-cli": "^0.4.4",
     "topojson": "^3.0.2"
   }
