--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "start": "sirv public",
-    "deploy": "npm run build; gh-pages -d public"
+    "deploy": "npm run build; gh-pages -d public",
+    "prettier": "npx prettier --write \"{,!(node_modules)/**/}*.{js,jsx,svelte}\""
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "gh-pages": "^2.2.0",
+    "prettier": "^2.0.4",
+    "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
