--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "d3": "^5.15.1",
     "d3-tip": "^0.9.1",
+    "lodash": "^4.17.15",
     "mapbox-gl": "^1.9.1",
     "moment": "^2.24.0",
     "sirv-cli": "^0.4.4",
