--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "color-parse": "^1.3.8",
     "d3": "^5.15.1",
     "d3-tip": "^0.9.1",
+    "invert-color": "^2.0.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.9.1",
     "moment": "^2.24.0",
