--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
     "d3": "^5.15.1",
     "d3-tip": "^0.9.1",
     "invert-color": "^2.0.0",
-    "lodash": "^4.17.15",
     "mapbox-gl": "^1.9.1",
-    "moment": "^2.24.0",
-    "sirv-cli": "^0.4.4",
-    "topojson": "^3.0.2"
+    "sirv-cli": "^0.4.4"
   }
 }
