--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3-tip": "^0.9.1",
     "invert-color": "^2.0.0",
     "mapbox-gl": "^1.9.1",
+    "moment": "^2.24.0",
     "sirv-cli": "^0.4.4"
   }
 }
