--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "Buffer": "0.0.0",
+    "base64url": "^3.0.1",
     "color-parse": "^1.3.8",
     "d3": "^5.15.1",
     "d3-tip": "^0.9.1",
