--- a/package.json
+++ b/package.json
@@ -10,27 +10,33 @@
     "prettier": "npx prettier --write \"{,!(node_modules)/**/}*.{js,jsx,svelte}\""
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "bestzip": "^2.1.5",
     "gh-pages": "^2.2.0",
-    "prettier": "^2.0.4",
+    "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^0.7.0",
     "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.0.0"
+    "svelte": "^3.21.0"
   },
   "dependencies": {
     "Buffer": "0.0.0",
     "base64url": "^3.0.1",
     "color-parse": "^1.3.8",
-    "d3": "^5.15.1",
+    "corejs": "^1.0.0",
+    "d3": "^5.16.0",
     "d3-tip": "^0.9.1",
+    "es6-shim": "^0.35.5",
     "invert-color": "^2.0.0",
-    "mapbox-gl": "^1.9.1",
+    "mapbox-gl": "^1.10.0",
     "moment": "^2.24.0",
-    "sirv-cli": "^0.4.4"
+    "polyfill-array-includes": "^2.0.0",
+    "rollup-plugin-buble": "^0.19.8",
+    "sirv-cli": "^0.4.4",
+    "url-search-params-polyfill": "^8.1.0",
+    "whatwg-fetch": "^3.0.0"
   }
 }
