--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "color-parse": "^1.3.8",
     "corejs": "^1.0.0",
     "d3": "^5.16.0",
+    "d3-scale": "^3.2.1",
     "d3-tip": "^0.9.1",
     "es6-shim": "^0.35.5",
     "invert-color": "^2.0.0",
