--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "simple-svelte-autocomplete": "^1.1.2",
     "svelte": "^3.21.0"
   },
   "dependencies": {
@@ -40,8 +39,9 @@
     "moment": "^2.24.0",
     "polyfill-array-includes": "^2.0.0",
     "rollup-plugin-buble": "^0.19.8",
+    "simple-svelte-autocomplete": "^1.1.2",
     "sirv-cli": "^0.4.4",
-    "svelte-autocomplete": "0.0.4",
+    "svelte-icons": "^2.1.0",
     "url-search-params-polyfill": "^8.1.0",
     "whatwg-fetch": "^3.0.0"
   }
