--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rollup-plugin-buble": "^0.19.8",
     "simple-svelte-autocomplete": "^1.1.2",
     "sirv-cli": "^0.4.4",
+    "svelte-calendar": "^1.5.0",
     "svelte-icons": "^2.1.0",
     "url-search-params-polyfill": "^8.1.0",
     "whatwg-fetch": "^3.0.0"
