apply prettier for more files and tune settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,25 @@
 {
   "editor.formatOnSave": true,
+  "editor.formatOnType": true,
+  "files.eol": "\n",
+  "editor.detectIndentation": false,
+  "editor.tabSize": 2,
   "[svelte]": {
     "editor.defaultFormatter": "JamesBirtles.svelte-vscode"
-  }
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[yaml]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
