--- a/package.json
+++ b/package.json
@@ -21,27 +21,21 @@
     "rollup-plugin-livereload": "^1.3.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.21.0"
+    "svelte": "^3.21.0",
+    "rollup-plugin-buble": "^0.19.8",
+    "sirv-cli": "^0.4.4"
   },
   "dependencies": {
-    "Buffer": "0.0.0",
-    "base64url": "^3.0.1",
     "color-parse": "^1.3.8",
     "compute-logspace": "^1.0.0",
     "corejs": "^1.0.0",
     "d3": "^5.16.0",
-    "d3-scale": "^3.2.1",
     "d3-tip": "^0.9.1",
     "es6-shim": "^0.35.5",
-    "http": "0.0.1-security",
-    "https": "^1.0.0",
     "invert-color": "^2.0.0",
     "mapbox-gl": "^1.10.0",
-    "moment": "^2.24.0",
     "polyfill-array-includes": "^2.0.0",
-    "rollup-plugin-buble": "^0.19.8",
     "simple-svelte-autocomplete": "^1.1.2",
-    "sirv-cli": "^0.4.4",
     "svelte-calendar": "^1.5.0",
     "svelte-icons": "^2.1.0",
     "url-search-params-polyfill": "^8.1.0",
