--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,4 +22,9 @@
   "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "eslint.enable": true,
+  "eslint.validate": [
+    "javascript",
+    "svelte"
+  ]
 }
