--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint": "^7.4.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "gh-pages": "^2.2.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
     "rollup": "^1.20.0",
@@ -49,5 +51,14 @@
     "svelte-icons": "^2.1.0",
     "url-search-params-polyfill": "^8.1.0",
     "whatwg-fetch": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,svelte}": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   }
 }
