--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "delphi-hcii-covidcast",
   "version": "1.0.0",
+  "private": true,
+  "description": "",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
+    "start": "cross-env NODE_ENV=development webpack-dev-server -d --open",
+    "build": "cross-env NODE_ENV=production webpack -p",
     "deploy": "npm run build; gh-pages -d public",
     "release": "npm run build && bestzip release.zip public/*",
     "prettier": "prettier --write \"**/*\"",
@@ -12,39 +13,40 @@
     "lint:fix": "eslint src --ext .js,.svelte --fix && prettier --write \"**/*\""
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0",
     "bestzip": "^2.1.5",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-plugin-svelte3": "^2.7.3",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-livereload": "^1.3.0",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.21.0",
-    "rollup-plugin-buble": "^0.19.8",
-    "sirv-cli": "^0.4.4"
+    "svelte": "^3.24.0",
+    "svelte-loader": "^2.13.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "color-parse": "^1.3.8",
     "compute-logspace": "^1.0.0",
-    "corejs": "^1.0.0",
+    "core-js": "^3.6.5",
     "d3": "^5.16.0",
     "d3-tip": "^0.9.1",
-    "es6-shim": "^0.35.5",
     "invert-color": "^2.0.0",
-    "mapbox-gl": "^1.10.0",
-    "polyfill-array-includes": "^2.0.0",
+    "mapbox-gl": "^1.11.1",
     "simple-svelte-autocomplete": "^1.1.2",
     "svelte-calendar": "^1.5.0",
-    "svelte-icons": "^2.1.0",
-    "url-search-params-polyfill": "^8.1.0",
-    "whatwg-fetch": "^3.0.0"
+    "svelte-icons": "^2.1.0"
   },
   "husky": {
     "hooks": {
