--- a/.prettierignore
+++ b/.prettierignore
@@ -1,11 +1,13 @@
 /node_modules
-/public/build/
 /package-lock.json
 .gitignore
+.browserslistrc
+.gitattributes
 .prettierignore
 /old_maps
 *.ico
 *.png
 *.svg
 *.csv
-/public/maps
+/public
+/src/static
