--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "delphi-hcii-covidcast",
-  "version": "1.0.0",
+  "version": "1.5.3",
   "private": true,
   "description": "",
   "scripts": {
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
+    "release-it": "^13.6.5",
     "svelte": "^3.24.0",
     "svelte-loader": "^2.13.6",
     "webpack": "^4.43.0",
