--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "svelte-loader": "^2.13.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "workbox-webpack-plugin": "^5.1.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "color-parse": "^1.3.8",
