--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "css-loader": "^3.6.0",
     "eslint": "^7.4.0",
     "eslint-plugin-svelte3": "^2.7.3",
+    "file-loader": "^6.0.0",
     "gh-pages": "^3.1.0",
     "html-webpack-harddisk-plugin": "^1.0.2",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
+    "json-loader": "^0.5.7",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
     "svelte": "^3.24.0",
     "svelte-loader": "^2.13.6",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
