run prettier on svelte files

--- a/package.json
+++ b/package.json
@@ -57,6 +57,6 @@
   },
   "lint-staged": {
     "*.{js,svelte}": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,css,md,svelte}": "prettier --write"
   }
 }
