--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
+    "raw-loader": "^4.0.1",
     "svelte": "^3.24.0",
     "svelte-loader": "^2.13.6",
     "url-loader": "^4.1.0",
