--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "color-parse": "^1.3.8",
+    "compile": "0.0.2",
     "compute-logspace": "^1.0.0",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
@@ -48,7 +49,10 @@
     "regenerator-runtime": "^0.13.5",
     "simple-svelte-autocomplete": "^1.1.2",
     "svelte-calendar": "^1.5.0",
-    "svelte-icons": "^2.1.0"
+    "svelte-icons": "^2.1.0",
+    "vega": "^5.13.0",
+    "vega-embed": "^6.10.0",
+    "vega-lite": "^4.14.0"
   },
   "husky": {
     "hooks": {
