--- a/package.json
+++ b/package.json
@@ -49,6 +49,12 @@
     "compute-logspace": "^1.0.0",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
+    "d3-color": "^1.4.1",
+    "d3-dsv": "^1.2.0",
+    "d3-scale": "^3.2.1",
+    "d3-scale-chromatic": "^1.5.0",
+    "d3-time": "^1.1.0",
+    "d3-time-format": "^2.2.3",
     "d3-tip": "^0.9.1",
     "invert-color": "^2.0.0",
     "mapbox-gl": "^1.11.1",
