--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "d3-time-format": "^2.2.3",
     "d3-tip": "^0.9.1",
     "invert-color": "^2.0.0",
+    "lodash-es": "^4.17.15",
     "mapbox-gl": "^1.11.1",
     "regenerator-runtime": "^0.13.7",
     "svelte-icons": "^2.1.0",
