--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@mapbox/geojson-extent": "^0.3.2",
+    "@turf/intersect": "^6.1.3",
     "compute-logspace": "^1.0.0",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
