--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
+    "@turf/boolean-disjoint": "^6.0.2",
+    "@turf/centroid": "^6.0.2",
     "babel-loader": "^8.1.0",
     "bestzip": "^2.1.6",
     "clean-webpack-plugin": "^3.0.0",
