--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "mini-css-extract-plugin": "^0.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^2.0.5",
     "prettier-plugin-svelte": "^1.1.0",
-    "svelte": "^3.24.1",
     "raw-loader": "^4.0.1",
     "release-it": "^13.6.8",
+    "svelte": "^3.24.1",
     "svelte-loader": "^2.13.6",
+    "terser-webpack-plugin": "^4.1.0",
     "topojson-client": "^3.1.0",
     "topojson-server": "^3.0.1",
     "url-loader": "^4.1.0",
