--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "prettier": "prettier --write \"**/*\"",
     "lint": "eslint src --ext .js,.svelte && prettier --check \"**/*\"",
     "lint:fix": "eslint src --ext .js,.svelte --fix && prettier --write \"**/*\"",
-    "release": "release-it"
+    "release": "release-it --disable-metrics"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
