--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "d3-color": "^1.4.1",
     "d3-dsv": "^1.2.0",
     "d3-format": "^1.4.4",
+    "d3-random": "^2.2.0",
     "d3-scale": "^3.2.1",
     "d3-scale-chromatic": "^1.5.0",
     "d3-time": "^2.0.0",
