don't publish to npm

--- a/.release-it.json
+++ b/.release-it.json
@@ -7,6 +7,9 @@
   "git": {
     "tagName": "v${version}"
   },
+  "npm": {
+    "publish": false
+  },
   "github": {
     "release": true,
     "assets": ["release.zip"]
