better handle mode switch

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "puppeteer": "^5.2.1",
-    "puppeteer-cluster": "^0.22.0"
+    "puppeteer-cluster": "^0.22.0",
+    "querystring": "^0.2.0"
   }
 }
