--- a/package.json
+++ b/package.json
@@ -22,34 +22,34 @@
     "release": "release-it --disable-metrics"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@turf/boolean-disjoint": "^6.0.2",
     "@turf/centroid": "^6.0.2",
     "babel-loader": "^8.1.0",
-    "bestzip": "^2.1.6",
+    "bestzip": "^2.1.7",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
+    "copy-webpack-plugin": "^6.1.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
+    "css-loader": "^4.3.0",
     "dirty-reprojectors": "0.0.2",
-    "eslint": "^7.7.0",
+    "eslint": "^7.9.0",
     "eslint-plugin-svelte3": "^2.7.3",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.1.0",
     "gh-pages": "^3.1.0",
     "html-webpack-harddisk-plugin": "^1.0.2",
-    "html-webpack-plugin": "^4.3.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.11",
-    "mini-css-extract-plugin": "^0.10.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "prettier": "^2.0.5",
-    "prettier-plugin-svelte": "^1.1.0",
+    "html-webpack-plugin": "^4.4.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.3.0",
+    "mini-css-extract-plugin": "^0.11.2",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "prettier": "^2.1.1",
+    "prettier-plugin-svelte": "^1.2.1",
     "raw-loader": "^4.0.1",
-    "release-it": "^13.6.8",
-    "svelte": "^3.24.1",
+    "release-it": "^14.0.2",
+    "svelte": "^3.25.0",
     "svelte-loader": "^2.13.6",
-    "terser-webpack-plugin": "^4.1.0",
+    "terser-webpack-plugin": "^4.2.0",
     "topojson-client": "^3.1.0",
     "topojson-server": "^3.0.1",
     "url-loader": "^4.1.0",
@@ -59,26 +59,27 @@
   },
   "dependencies": {
     "@mapbox/geojson-extent": "^0.3.2",
+    "@popperjs/core": "^2.4.4",
     "@turf/intersect": "^6.1.3",
     "compute-logspace": "^1.0.0",
     "core-js": "^3.6.5",
-    "d3-color": "^1.4.1",
-    "d3-dsv": "^1.2.0",
-    "d3-format": "^1.4.4",
-    "d3-random": "^2.2.0",
-    "d3-scale": "^3.2.1",
-    "d3-scale-chromatic": "^1.5.0",
+    "d3-color": "^2.0.0",
+    "d3-dsv": "^2.0.0",
+    "d3-format": "^2.0.0",
+    "d3-random": "^2.2.2",
+    "d3-scale": "^3.2.2",
+    "d3-scale-chromatic": "^2.0.0",
     "d3-time": "^2.0.0",
-    "d3-time-format": "^2.2.3",
+    "d3-time-format": "^3.0.0",
     "lodash-es": "^4.17.15",
     "mapbox-gl": "^1.12.0",
     "nouislider": "^14.6.1",
     "regenerator-runtime": "^0.13.7",
     "resize-observer-polyfill": "^1.5.1",
     "svelte-icons": "^2.1.0",
-    "vega": "^5.14.0",
-    "vega-embed": "^6.10.0",
-    "vega-lite": "^4.14.1"
+    "vega": "^5.15.0",
+    "vega-embed": "^6.12.2",
+    "vega-lite": "^4.15.0"
   },
   "husky": {
     "hooks": {
