--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "prettier-plugin-svelte": "^1.2.1",
     "raw-loader": "^4.0.1",
     "release-it": "^14.0.2",
+    "style-loader": "^1.3.0",
     "svelte": "^3.25.0",
     "svelte-loader": "^2.13.6",
+    "svelte-loader-hot": "^0.3.1",
     "terser-webpack-plugin": "^4.2.0",
     "topojson-client": "^3.1.0",
     "topojson-server": "^3.0.1",
