--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.3.0",
     "mini-css-extract-plugin": "^0.11.2",
+    "node-fetch": "^2.6.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.1",
     "prettier-plugin-svelte": "^1.2.1",
