--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
     "@mapbox/geojson-extent": "^0.3.2",
     "@popperjs/core": "^2.4.4",
     "@turf/intersect": "^6.1.3",
+    "@ygoe/msgpack": "^1.0.2",
     "compute-logspace": "^1.0.0",
     "core-js": "^3.6.5",
+    "d3-array": "^2.8.0",
     "d3-color": "^2.0.0",
     "d3-dsv": "^2.0.0",
     "d3-format": "^2.0.0",
