build: simple test setup using jest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
             ${{ runner.OS }}-node2-
       - run: npm ci
       - run: npm run lint
+      - run: npm run test
       - run: npm run build
       - name: Deploy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
