--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "lint": "eslint src --ext .js,.svelte && prettier --check \"**/*\"",
     "lint:fix": "eslint src --ext .js,.svelte --fix && prettier --write \"**/*\"",
     "release": "release-it --disable-metrics",
-    "changelog": "node ./scripts/changelog.js"
+    "changelog": "node ./scripts/changelog.js",
+    "test": "jest --passWithNoTests"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@octokit/request": "^5.4.9",
+    "@testing-library/svelte": "^3.0.0",
     "@turf/boolean-disjoint": "^6.0.2",
     "@turf/centroid": "^6.0.2",
+    "babel-jest": "^26.6.1",
     "babel-loader": "^8.1.0",
     "bestzip": "^2.1.7",
     "clean-webpack-plugin": "^3.0.0",
@@ -44,6 +47,7 @@
     "html-webpack-harddisk-plugin": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.3.0",
+    "jest": "^26.6.1",
     "js-yaml": "^3.14.0",
     "lint-staged": "^10.3.0",
     "marked": "^1.2.0",
@@ -56,6 +60,7 @@
     "release-it": "^14.0.2",
     "style-loader": "^1.3.0",
     "svelte": "^3.25.0",
+    "svelte-jester": "^1.1.5",
     "svelte-loader": "^2.13.6",
     "svelte-loader-hot": "^0.3.1",
     "terser-webpack-plugin": "^4.2.0",
