--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "prettier-plugin-svelte": "^1.2.1",
     "raw-loader": "^4.0.1",
     "release-it": "^14.0.2",
+    "seedrandom": "^3.0.5",
     "style-loader": "^1.3.0",
     "svelte": "^3.25.0",
     "svelte-jester": "^1.1.5",
