build: always serve files through a server

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
       - run: npm run build
       - run: npm run test
       - uses: cypress-io/github-action@v2
+        with:
+          start: http-server
       # after the test run completes
       # store videos and any screenshots
       # NOTE: screenshots will be generated only if E2E test failed
