--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "release": "release-it --disable-metrics",
     "changelog": "node ./scripts/changelog.js",
     "test": "jest --passWithNoTests",
-    "test:e2e": "cypress run",
+    "test:e2e": "concurrently \"http-server\" \"cypress run\"",
     "cy:open": "cypress open",
+    "serve": "http-server",
     "cy:dev": "cypress open --config baseUrl=http://localhost:8080"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "babel-loader": "^8.1.0",
     "bestzip": "^2.1.7",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.3.0",
     "copy-webpack-plugin": "^6.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
@@ -54,6 +56,7 @@
     "gh-pages": "^3.1.0",
     "html-webpack-harddisk-plugin": "^1.0.2",
     "html-webpack-plugin": "^4.4.1",
+    "http-server": "^0.12.3",
     "husky": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.1",
