--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "test": "jest --passWithNoTests",
     "test:e2e": "concurrently \"http-server\" \"cypress run\"",
     "cy:open": "cypress open",
-    "serve": "http-server",
-    "cy:dev": "cypress open --config baseUrl=http://localhost:8080"
+    "serve": "http-server"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
