--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/svelte": "^3.0.0",
     "@turf/boolean-disjoint": "^6.0.2",
+    "@turf/center-of-mass": "^6.0.1",
     "@turf/centroid": "^6.0.2",
+    "@turf/transform-translate": "^5.1.5",
     "babel-jest": "^26.6.1",
     "babel-loader": "^8.1.0",
     "bestzip": "^2.1.7",
