--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@turf/boolean-disjoint": "^6.0.2",
     "@turf/center-of-mass": "^6.0.1",
     "@turf/centroid": "^6.0.2",
+    "@turf/meta": "^6.0.2",
     "@turf/transform-translate": "^5.1.5",
     "babel-jest": "^26.6.1",
     "babel-loader": "^8.1.0",
