--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@mapbox/geojson-extent": "^0.3.2",
     "@popperjs/core": "^2.4.4",
     "@turf/intersect": "^6.1.3",
+    "@types/lodash-es": "^4.17.3",
     "compute-logspace": "^1.0.0",
     "core-js": "^3.6.5",
     "d3-color": "^2.0.0",
