build: add staging context multiple descripions

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,7 @@
 
 [context.deploy-preview.environment]
   COVIDCAST_ENDPOINT_URL = "https://api.covidcast.cmu.edu/epidata/api.php"
+
+[context.staging.environment]
+  COVIDCAST_ENDPOINT_URL = "https://api-staging.delphi.cmu.edu/epidata/api.php"
+  COVIDCAST_SIGNAL_DOC = "https://docs.google.com/document/d/1RLy4O-gtACVjLEVD_vxyPqvp9nWVhqEjoWAKi68RKpg,https://docs.google.com/document/d/1Yi_ueKvASwyzm6ZJEcrStk5qVIKz94N2yEHlklfnEig"
