--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "regenerator-runtime": "^0.13.7",
     "resize-observer-polyfill": "^1.5.1",
     "svelte-icons": "^2.1.0",
+    "uikit": "^3.5.9",
     "vega": "^5.15.0",
     "vega-embed": "^6.12.2",
     "vega-lite": "^4.15.0"
