--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "prettier-plugin-svelte": "^1.2.1",
     "raw-loader": "^4.0.1",
     "release-it": "^14.0.2",
+    "sass": "^1.28.0",
+    "sass-loader": "^10.0.5",
     "seedrandom": "^3.0.5",
     "style-loader": "^1.3.0",
     "svelte": "^3.25.0",
