--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "delphi-hcii-covidcast",
+  "name": "www-covidcast",
   "version": "1.9.3",
   "private": true,
   "license": "MIT",
@@ -12,6 +12,10 @@
     "type": "git",
     "url": "https://github.com/cmu-delphi/www-covidcast.git"
   },
+  "main": "public/bundle.js",
+  "files": [
+    "public"
+  ],
   "scripts": {
     "gen": "node ./scripts/generateDescriptions.js",
     "start": "npm run gen && cross-env NODE_ENV=development webpack-dev-server -d --open",
@@ -84,9 +88,7 @@
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "dependencies": {
+    "webpack-dev-server": "^3.11.0",
     "@mapbox/geojson-extent": "^0.3.2",
     "@popperjs/core": "^2.4.4",
     "@turf/intersect": "^6.1.3",
@@ -107,10 +109,12 @@
     "regenerator-runtime": "^0.13.7",
     "resize-observer-polyfill": "^1.5.1",
     "svelte-icons": "^2.1.0",
-    "uikit": "^3.5.9",
     "vega": "^5.15.0",
     "vega-embed": "^6.12.2",
     "vega-lite": "^4.15.0"
+  },
+  "dependencies": {
+    "uikit": "^3.5.9"
   },
   "husky": {
     "hooks": {
