--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "test": "jest --passWithNoTests",
     "test:e2e": "concurrently \"http-server\" \"cypress run\"",
     "cy:open": "cypress open",
-    "serve": "http-server"
+    "serve": "http-server",
+    "prepare": "echo 'dummy prepare since prepack has no dev dependencies'",
+    "prepack": "npm run build"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
