fix: change quantization of hrr to avoid weird error

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "scripts": {
     "gen": "node ./scripts/generateDescriptions.js",
+    "process-geo": "node ./src/maps/process.js",
     "start": "npm run gen && cross-env NODE_ENV=development webpack-dev-server -d --open",
     "build": "npm run gen && cross-env NODE_ENV=production webpack -p",
     "deploy": "npm run build; gh-pages -d public",
