--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-svelte3": "^3.0.0",
     "file-loader": "^6.2.0",
+    "geo-albers-usa-territories": "^0.1.0",
     "gh-pages": "^3.1.0",
     "html-webpack-harddisk-plugin": "^1.0.2",
     "html-webpack-plugin": "^4.5.0",
