feat: add persistent descriptions and check/update them with fallback

--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   "scripts": {
     "clean": "rimraf \"*.zip\" \"*.tgz\" public",
     "gen": "node ./scripts/generateDescriptions.js",
+    "gen:check": "npm run gen -- --check",
+    "gen:fallback": "npm run gen -- --fallback",
     "process-geo": "node ./src/maps/process.js",
-    "start": "npm run gen && cross-env NODE_ENV=development webpack-dev-server -d --open",
+    "start": "npm run gen:fallback && cross-env NODE_ENV=development webpack-dev-server -d --open",
     "prebuild": "npm run clean",
-    "build": "npm run gen && cross-env NODE_ENV=production webpack -p",
+    "build": "npm run gen:fallback && cross-env NODE_ENV=production webpack -p",
     "watch": "cross-env NODE_ENV=development webpack --mode development -w",
     "deploy": "npm run build; gh-pages -d public",
     "zip": "cd public && bestzip ../release.zip *",
     "prettier": "prettier --write \"**/*\"",
-    "lint": "eslint src --ext .js,.svelte && prettier --check \"**/*\"",
+    "lint": "npm run gen:check && eslint src --ext .js,.svelte && prettier --check \"**/*\"",
     "lint:fix": "eslint src --ext .js,.svelte --fix && prettier --write \"**/*\"",
     "release": "release-it --disable-metrics",
     "changelog": "node ./scripts/changelog.js",
