--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@turf/bbox": "^6.0.1",
     "@turf/boolean-disjoint": "^6.0.2",
     "@turf/center-of-mass": "^6.0.1",
+    "@turf/combine": "^6.3.0",
+    "@turf/dissolve": "^6.3.0",
     "@turf/intersect": "^6.1.3",
     "@turf/meta": "^6.0.2",
     "@types/lodash-es": "^4.17.4",
