--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gen:check": "npm run gen -- --check",
     "gen:fallback": "npm run gen -- --fallback",
     "process-geo": "node ./src/maps/process.js",
-    "start": "npm run gen:fallback && cross-env NODE_ENV=development webpack serve --mode development --hot --devtool eval",
+    "start": "npm run gen:fallback && cross-env NODE_ENV=development webpack serve --mode development --hot --devtool eval-cheap-module-source-map",
     "prebuild": "npm run clean",
     "build": "npm run gen:fallback && cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode development -w",
