--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
   "scripts": {
     "clean": "rimraf \"*.zip\" \"*.tgz\" public",
     "gen": "node ./scripts/generateDescriptions.js",
-    "gen:check": "echo 'disabled temporarily'",
+    "gen:check": "npm run gen -- --check",
     "gen:local": "npm run gen -- --localOnly",
     "gen:fallback": "npm run gen -- --fallback",
     "process-geo": "node ./src/maps/process.js",
     "start": "npm run gen:fallback && cross-env NODE_ENV=development webpack serve --mode development --hot --devtool eval-cheap-module-source-map",
     "prebuild": "npm run clean",
-    "build": "npm run gen:local && cross-env NODE_ENV=production webpack --mode production",
+    "build": "npm run gen:fallback && cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode development -w",
     "zip": "cd public && bestzip ../release.zip *",
     "prettier": "prettier --write \"**/*\"",
