--- a/.github/workflows/release_main.yml
+++ b/.github/workflows/release_main.yml
@@ -107,7 +107,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: dev
-          ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh-key: ${{ secrets.CMU_DELPHI_DEPLOY_MACHINE_SSH }}
       - name: Reset dev branch
         run: |
           git fetch origin main:main
