--- a/.github/workflows/release_main.yml
+++ b/.github/workflows/release_main.yml
@@ -73,6 +73,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: cmu-delphi/www-main
+          ssh-key: ${{ secrets.CMU_DELPHI_DEPLOY_MACHINE_SSH }}
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
