--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
     "prepack": "npm run build"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@octokit/request": "^5.4.14",
     "@popperjs/core": "^2.9.1",
     "@testing-library/cypress": "^7.0.4",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/svelte": "^3.0.3",
+    "@tsconfig/svelte": "^1.0.10",
     "@turf/bbox": "^6.3.0",
     "@turf/boolean-disjoint": "^6.3.0",
     "@turf/center-of-mass": "^6.3.0",
@@ -56,29 +57,32 @@
     "@turf/dissolve": "^6.3.0",
     "@turf/intersect": "^6.3.0",
     "@turf/meta": "^6.3.0",
+    "@types/jest": "^26.0.22",
     "@types/lodash-es": "^4.17.4",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "compute-logspace": "^1.0.0",
     "concurrently": "^6.0.0",
-    "copy-webpack-plugin": "^8.0.0",
+    "copy-webpack-plugin": "^8.1.0",
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.2.0",
     "css-minimizer-webpack-plugin": "^1.3.0",
-    "cypress": "^6.6.0",
+    "cypress": "^6.8.0",
     "cypress-image-snapshot": "^4.0.1",
     "d3-color": "^2.0.0",
     "d3-dsv": "^2.0.0",
     "d3-format": "^2.0.0",
     "d3-random": "^2.2.2",
-    "d3-scale": "^3.2.3",
+    "d3-scale": "^3.2.4",
     "d3-scale-chromatic": "^2.0.0",
     "d3-time": "^2.0.0",
     "d3-time-format": "^3.0.0",
     "dirty-reprojectors": "0.0.2",
-    "eslint": "^7.22.0",
+    "eslint": "^7.23.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-svelte3": "^3.1.2",
     "file-loader": "^6.2.0",
@@ -86,7 +90,7 @@
     "html-webpack-harddisk-plugin": "^2.0.0",
     "html-webpack-plugin": "^5.3.1",
     "http-server": "^0.12.3",
-    "husky": "^5.1.3",
+    "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "js-cookie": "^2.2.1",
@@ -95,31 +99,37 @@
     "lodash-es": "^4.17.21",
     "mapbox-gl": "^1.13.0",
     "marked": "^2.0.1",
-    "mini-css-extract-plugin": "^1.3.9",
+    "mini-css-extract-plugin": "^1.4.0",
     "node-fetch": "^2.6.1",
-    "regression": "^2.0.1",
     "nouislider": "^14.6.4",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
     "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
+    "regression": "^2.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "seedrandom": "^3.0.5",
     "style-loader": "^2.0.0",
     "svelte": "^3.35.0",
+    "svelte-check": "^1.3.0",
     "svelte-icons": "^2.1.0",
-    "svelte-jester": "^1.3.0",
+    "svelte-jester": "^1.3.2",
     "svelte-loader": "^3.0.0",
+    "svelte-preprocess": "^4.7.0",
     "topojson-client": "^3.1.0",
     "topojson-server": "^3.0.1",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.1.0",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3",
     "url-loader": "^4.1.1",
     "vega": "^5.20.0",
-    "vega-embed": "^6.16.0",
+    "vega-embed": "^6.17.0",
     "vega-lite": "^5.0.0",
-    "webpack": "^5.26.3",
-    "webpack-cli": "^4.5.0",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
