--- a/package.json
+++ b/package.json
@@ -61,9 +61,12 @@
     "@types/d3-color": "^2.0.1",
     "@types/d3-dsv": "^2.0.1",
     "@types/d3-format": "^2.0.0",
+    "@types/d3-time": "^2.0.0",
     "@types/d3-time-format": "^3.0.0",
     "@types/jest": "^26.0.22",
     "@types/lodash-es": "^4.17.4",
+    "@types/node": "^14.14.37",
+    "@types/regression": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "babel-jest": "^26.6.3",
