--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@types/d3-color": "^2.0.1",
     "@types/d3-dsv": "^2.0.1",
     "@types/d3-format": "^2.0.0",
+    "@types/d3-scale": "^3.2.2",
+    "@types/d3-scale-chromatic": "^2.0.0",
     "@types/d3-time": "^2.0.0",
     "@types/d3-time-format": "^3.0.0",
     "@types/jest": "^26.0.22",
