--- a/.github/workflows/release_main.yml
+++ b/.github/workflows/release_main.yml
@@ -116,6 +116,7 @@ jobs:
       - name: Create pull request into dev
         uses: peter-evans/create-pull-request@v3
         with:
+          token: ${{ secrets.CMU_DELPHI_DEPLOY_MACHINE_TOKEN }}
           branch: bot/sync-main-dev
           commit-message: 'chore: sync main-dev'
           base: dev
