--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,6 @@
     "importsNotUsedAsValues": "error",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types.d.ts"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
