refactor: more strict ts settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,17 @@
     "module": "ES2020",
     "lib": ["ES2019", "DOM"],
     "importsNotUsedAsValues": "error",
+    "strict": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+
     "resolveJsonModule": true
   },
   "include": ["src/**/*", "types.d.ts"],
