ci: rename workflow

--- a/.github/workflows/update_gdocs_data.yml
+++ b/.github/workflows/update_gdocs_data.yml
@@ -2,7 +2,7 @@ name: Update Google Docs Data
 on:
   workflow_dispatch:
 jobs:
-  create_release:
+  update_gdocs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
