--- a/package.json
+++ b/package.json
@@ -144,6 +144,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/lz-string": "^1.3.34",
+    "lz-string": "^1.4.4",
     "uikit": "^3.6.19"
   },
   "lint-staged": {
