--- a/.prettierignore
+++ b/.prettierignore
@@ -11,8 +11,9 @@
 *.csv
 /public
 /src/static
-/src/maps/raw
-/src/maps/processed
+/src/modes/classic/maps/raw
+/src/modes/classic/maps/processed
+/src/data/processed
 /src/specs/shapefiles
 /src/specs/tilegrams
 *.generated.json
