--- a/package.json
+++ b/package.json
@@ -139,11 +139,11 @@
     "vega-lite": "^5.1.0",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "@types/lz-string": "^1.3.34",
+    "lz-string": "^1.4.4"
   },
   "dependencies": {
-    "@types/lz-string": "^1.3.34",
-    "lz-string": "^1.4.4",
     "uikit": "^3.6.19"
   },
   "lint-staged": {
