--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "watch": "cross-env NODE_ENV=development webpack --mode development -w",
     "prettier": "prettier --write \"**/*\"",
     "lint": "npm run gen:check && eslint src --ext .js,.svelte && prettier --check \"**/*\"",
-    "lint:fix": "eslint src --ext .js,.svelte --fix && prettier --write \"**/*\"",
+    "fix": "eslint src --ext .js,.svelte --fix && prettier --write \"**/*\"",
     "test": "jest --passWithNoTests",
     "test:e2e": "concurrently \"http-server\" \"cypress run\"",
     "cy:open": "cypress open",
