--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "public/bundle.js",
   "files": [
     "public/**.js",
+    "public/**.map",
     "public/**.txt",
     "public/**.css",
     "!public/wrapper.*"
