--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@types/d3-time-format": "^3.0.0",
     "@types/jest": "^26.0.23",
     "@types/lodash-es": "^4.17.4",
+    "@types/lz-string": "^1.3.34",
+    "@types/marked": "^2.0.3",
     "@types/node": "^15.12.5",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
