Use qa2 API env for v4 schema testing

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,7 @@
   COVIDCAST_ANNOTATION_DRAFTS = "true"
 
 [context.deploy-preview.environment]
-  COVIDCAST_ENDPOINT_URL = "https://api.covidcast.cmu.edu/epidata"
+  COVIDCAST_ENDPOINT_URL = "https://staging.delphi.cmu.edu/qa2/epidata"
   COVIDCAST_ANNOTATION_DRAFTS = "true"
 
 [context.staging.environment]
