--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "js-cookie": "^3.0.1",
     "js-yaml": "^4.1.0",
     "lint-staged": "^13.0.3",
