--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,5 +28,6 @@
   "[svelte]": {
     "editor.defaultFormatter": "svelte.svelte-vscode"
   },
-  "eslint.validate": ["typescript", "javascript", "svelte"]
+  "eslint.validate": ["typescript", "javascript", "svelte"],
+  "githubPullRequests.ignoredPullRequestBranches": ["dev"]
 }
